Adds design and implementation to redirect preview ByResourceID to v1
This patch redirects `/resource/{id}` to `/v1/resource/{id}`
